2002-01-26  Junichi Uekawa  <dancer@debian.org>

	* dsh.c (main): error check asprintf.

2002-01-25  Junichi Uekawa  <dancer@debian.org>

	* ChangeLog: resume using the ChangeLog file.

	* TODO: created as a memo to document some wishlist.

2001-05-14  Junichi Uekawa  <dancer@netfort.gr.jp>

	* dsh.1: added documentation for homedir configs.

	* dsh.c (parse_options): added support for machines config.
	(read_machinelist): The machines list support.
	(parse_options): Configs in homedir too.

2001-05-13  Junichi Uekawa  <dancer@netfort.gr.jp>

	* dsh.1: Created a manpage

	* Makefile: Copied from other project. 

	* dsh.c: Created / started, by
	dancer@{debian.org,netfort.gr.jp,mikilab.doshisha.ac.jp} 
