@@ -1,3 +1,15 @@
+2002-02-03  Junichi Uekawa  <dancer@debian.org>
+
+	* libdshconfig.c (read_oneline): some minor playing around.
+	Aiming to make a basis for config reader usable in dsh, and 
+	also another project I am planning to work on.
+	
+	* libdshconfig.h: created
+	(dshconfig): created
+	(dshconfig_internal): created
+
+	* libdshconfig.c: creating a new file.
+
 2002-01-26  Junichi Uekawa  <dancer@debian.org>
 
 	* dsh.c (main): error check asprintf.
